    config page in main menu of Player Settings dialog.
18. Add BBC sounds logo.
19. Add file and directory browser for media paths in server settings.
20. Fix player icon colour when using light themes with coloured toolbar.
21. Darken background of 'Dark' theme so as to work-around Chrome changing
    certain colours if its force dark mode is enabled.

1.9.2
-----
1. Fix sort option when listing albums under years category.
2. Fix renaming pinned items.
3. If writeError is returned when saving play queue then inform user that queue
   was not saved.
4. Disable ripple effect from buttons, works-around search button having
   highlight when long-press back button to go home.

1.9.1
-----
1. Add option to show 'Go home' button.
2. No need to scroll search field into view if its in subtoolbar.
3. Fix rating HTML being displayed when a queue item's rating is updated and
   'More' selected.
4. Add note to sort-favourites config item stating that folders are always
   sorted.
5. Move ratings in portrait now-playing to bottom of cover.
6. Fix position of ratings in landscape now-playing.
7. Fix track title mangling when adding single tracks to the queue.
8. When building command use 'commonParams' from item if it exists - fixes
   playing tracks from top/flop tracks.
9. Restrict top/flop tracks to 200 items.

1.9.0
-----
 1. Allow specifying theme, and colour, via URL query. e.g.
    http://SERVER:9000/material/?theme=dark,green For platform themes (e.g.
    Adwaita-Dark) you need to specify path. e.g. "theme=linux/dark/Adwaita-Dark"
 2. Add 'Add to playlist' action, allowing tracks to be saved to new, or
    existing, playlists.
 3. On desktop browsers, allow keypress to jump via jumplist.
 4. Ignore swipe to change page if started in time position bar.
 5. For mobile devices, show time position tooltip with touch and drag.
 6. Replace search dialog with a search-as-type text field in subtoolbar.
 7. Show other search options at end of search results.